# lapplication

./: pyproject.toml
src/lapplication/: __init__.py  base.py  cli.py  decorator.py  lapplication.py
